node-main/deps/v8/test/message/fail/arrow-strict-eval-bare-parameter.out
*%(basename)s:6: SyntaxError: Unexpected eval or arguments in strict mode
eval => 42
^^^^
SyntaxError: Unexpected eval or arguments in strict mode
